# Chess_ai_app

./: Cargo.toml
src/: chess_utils.rs  etc.rs  lib.rs  main.rs  theme.rs
src/engine/: board.rs  capture.rs  fen.rs  mod.rs  move_gen.rs  piece.rs  quiet.rs  simulate.rs  uci.rs
src/game/: controller.rs  evaluator.rs  mod.rs  stockfish_engine.rs
src/ui/: app.rs  board_interaction.rs  game_info.rs  mod.rs  popup_render.rs  qote.rs  render.rs  screen_render.rs  theme.rs  ui_setting.rs
