[package]
name = "chess_app"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31.1"
egui_extras   = { version = "0.*", features = ["svg", "file", "image"] }
image = { version = "0.25", features = ["jpeg", "png"] } # Add the types you want support for
rand = "0.9.1"
serde = "1.0.219"
serde_json = "1.0.141"

stockfish = "0.2.11"
